--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ beautifulsoup4==4.6.0
 lxml==4.1.1
 nose==1.3.7
 pycodestyle==2.3.1
+python-dateutil==2.6.1
 requests==2.18.4
 requests-cache==0.4.13
