config: Fix all scripts by adding new required cookie "datr"
This is to fix all scripts in this repository that stopped working.
Without the "datr" cookie, the cookie consent page was returned.

See description of FB cookies in [1].

[1] https://techexpertise.medium.com/facebook-cookies-analysis-e1cf6ffbdf8a

> The purpose of the datr cookie is to identify the web browser being used to
> connect to Facebook independent of the logged in user. This cookie plays a key
> role in Facebook’s security and site integrity features. The datr cookie
> generation and setting code has been reviewed and it has been confirmed that
> the execution path followed in the case of a request for social plugin content
> does not set the “datr” cookie. The lifetime of the “datr” cookie is currently
> two years. This is a persistent cookie.

--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,7 @@
 {
     "caching_secs": -1,
-    "cookie_xs": "",
     "cookie_c_user": "",
+    "cookie_datr": "",
+    "cookie_xs": "",
     "logging_level": "INFO"
 }
